--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color:gainsboro;
+
 }
 
 a {
@@ -13,4 +15,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+img {
+  width:auto;
+  max-height: 90px;
 }
