--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -136,6 +136,20 @@
   overflow:hidden;
 }
 
+.bo{
+  width:100px;
+  height: 100px;
+  border-radius : 90%;
+  overflow:hidden;
+}
+
+.b{
+  width:100px;
+  height: 100px;
+  border-radius : 75%;
+  overflow:hidden;
+}
+
 .profile {
   width: 100%;
   height: 100%;
